<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_marginVertical="@dimen/margin_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_content_small">

        <ImageView
            android:id="@+id/iv_screen"
            android:layout_width="@dimen/width_image_small"
            android:layout_height="@dimen/height_image_small"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_similarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:padding="@dimen/padding_small"
            android:background="@color/green_400"
            android:text="@string/text_similarity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_screen"
            tools:text="97%" />

        <TextView
            android:id="@+id/tv_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/text_episode"
            app:layout_constraintTop_toTopOf="@id/tv_similarity"
            app:layout_constraintBottom_toBottomOf="@id/tv_similarity"
            app:layout_constraintStart_toEndOf="@id/tv_similarity"/>

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/text_range"
            app:layout_constraintTop_toTopOf="@id/tv_similarity"
            app:layout_constraintBottom_toBottomOf="@id/tv_similarity"
            app:layout_constraintStart_toEndOf="@id/tv_episode"
            tools:text="[56.7 .. 80.3]"/>

        <ImageView
            android:id="@+id/iv_is_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintTop_toTopOf="@id/tv_similarity"
            app:layout_constraintBottom_toBottomOf="@id/tv_similarity"
            app:layout_constraintStart_toEndOf="@id/tv_range"
            android:src="@drawable/ic_adult"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_similarity"
            app:layout_constraintStart_toStartOf="@id/tv_similarity"
            app:layout_constraintEnd_toEndOf="@id/iv_is_adult"
            android:text="@string/text_title"/>

        <ImageView
            android:id="@+id/iv_add_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_similarity"
            app:layout_constraintBottom_toTopOf="@id/iv_anilist"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_bookmark" />

        <ImageView
            android:id="@+id/iv_anilist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:src="@drawable/ic_anilist"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/iv_add_bookmark"
            app:layout_constraintTop_toBottomOf="@id/iv_add_bookmark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>