<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content_large"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_bookmarks"
            style="@style/WideButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_navigate_to_bookmarks"
            app:icon="@drawable/ic_bookmark"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_from_file"
            style="@style/RectangularButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/text_upload_from_file"
            app:icon="@drawable/ic_file"
            app:layout_constraintTop_toBottomOf="@id/btn_bookmarks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_from_camera"
            app:layout_constraintEnd_toStartOf="@id/btn_from_camera"/>

        <Button
            android:id="@+id/btn_from_camera"
            style="@style/RectangularButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_upload_from_camera"
            app:icon="@drawable/ic_camera"
            app:layout_constraintTop_toTopOf="@id/btn_from_file"
            app:layout_constraintStart_toEndOf="@id/btn_from_file"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_image_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_from_camera"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <Button
            android:id="@+id/btn_search"
            style="@style/WideButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_search"
            android:layout_marginTop="@dimen/margin_normal"
            app:icon="@drawable/ic_search"
            app:iconGravity="textEnd"
            app:iconSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_preview"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="iv_preview,btn_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_search"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_result"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:layout_gravity="center" />
</FrameLayout>